--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -80,7 +80,7 @@
     "        h = np.array([[2*size_setup_scaled,0,0]]*self.n_ensembles, dtype=np.float32)\n",
     "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
     "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
-    "                                             pack_cost.CollisionCostOverlappingArea(self.scaling_overlap)])\n",
+    "                                             pack_cost.CollisionCostSeparation(self.scaling_overlap)])\n",
     "        #cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.)])\n",
     "        if not self.use_boundary_distance:\n",
     "            cost.costs[1] = pack_cost.BoundaryCost(scaling=self.scaling_boundary)\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -170,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 58s, sys: 620 ms, total: 2min 58s\n",
-      "Wall time: 2min 59s\n"
+      "CPU times: user 2.38 s, sys: 174 ms, total: 2.56 s\n",
+      "Wall time: 2.6 s\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
     "base_runner.n_trees = 40\n",
     "base_runner.n_ensembles = 10000\n",
     "base_runner.n_rounds = 1\n",
-    "base_runner.duration_compact = 50.\n",
+    "base_runner.duration_compact = 5.\n",
     "base_runner.plot_interval = None\n",
     "base_runner.run_simulation()"
    ]
