--- a/analysis/dynamics4.ipynb
+++ b/analysis/dynamics4.ipynb
@@ -159,8 +159,7 @@
     "runner_list = []\n",
     "base_runner = MegaDynamics2()\n",
     "base_runner.n_trees = 40\n",
-    "base_runner.n_ensembles = 10\n",
-    "print('!!!')\n",
+    "base_runner.n_ensembles = 1000\n",
     "base_runner.n_rounds = 5\n",
     "base_runner.plot_interval = None\n",
     "gen = np.random.default_rng(seed=12345)\n",
@@ -175,12 +174,12 @@
     "    runner.scaling_area_start = 10.*10**gen.uniform(-0.5,0.) # range quite carefully checked - but before friction\n",
     "    runner.scaling_area_end = 10.*10**gen.uniform(-4., -3.5)\n",
     "    runner.scaling_boundary = 10.*5.#gen.uniform(1., 10**1.5)\n",
-    "    runner.scaling_overlap = 10.#gen.uniform(5.,15.)\n",
+    "    runner.scaling_overlap = 10.**gen.uniform(0.5,1.5)\n",
     "    runner.use_boundary_distance = True#gen.choice([True, False])\n",
     "    runner.friction_min = gen.uniform(0.1,0.3)\n",
     "    runner.friction_max = 0.\n",
     "    runner.friction_periods = gen.choice([1,2,3,4])\n",
-    "    runner.use_separation_overlap = True\n",
+    "    runner.use_separation_overlap = gen.choice([True, False])])\n",
     "    #runner.friction = 0.01#gen.uniform(0.01,0.3)\n",
     "    runner.run_simulation_wrap()\n",
     "    runner_list.append(runner)\n",
