Start setting up GA

--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -165,16 +165,7 @@
    "execution_count": null,
    "id": "cbd9d485",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2.38 s, sys: 174 ms, total: 2.56 s\n",
-      "Wall time: 2.6 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "kgs.profiling=False\n",
@@ -194,8 +185,104 @@
    "execution_count": null,
    "id": "9f10cc48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n",
+      "Preallocate for cost\n",
+      "(1, 40, 3) (1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pack_dynamics\n",
+    "gen = np.random.default_rng(seed=12345)\n",
+    "runner = pack_dynamics.Optimizer()\n",
+    "runner.n_iterations = runner.n_iterations\n",
+    "runner.max_grad_norm = None\n",
+    "runner2 = pack_dynamics.OptimizerGraph()\n",
+    "runner2.n_iterations = runner.n_iterations\n",
+    "runner2.max_grad_norm = None\n",
+    "size_setup_scaled = 0.65\n",
+    "n_ensembles = 1\n",
+    "n_trees = 40\n",
+    "xyt = np.random.default_rng(seed=52).uniform(-0.5, 0.5, size=(n_ensembles, n_trees, 3))\n",
+    "xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
+    "xyt = np.array(xyt, dtype=np.float32)\n",
+    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=np.float32)\n",
+    "h = h[0]\n",
+    "sol = kgs.SolutionCollection()\n",
+    "sol.xyt = cp.array(xyt, dtype=cp.float32)\n",
+    "sol.h = cp.array(h, dtype=cp.float32)\n",
+    "print(sol.xyt.shape, sol.h.shape)\n",
+    "sol.check_constraints()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1844eb16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 913 ms, sys: 151 ms, total: 1.06 s\n",
+      "Wall time: 1.09 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74089   , 0.02826184, 0.02542939], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sol=runner.run_simulation(sol);\n",
+    "sol.xyt[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f67fac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4004954249999173\n",
+      "CPU times: user 592 ms, sys: 387 ms, total: 979 ms\n",
+      "Wall time: 1.01 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.7185948 , -0.02002085, -0.1074951 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sol=runner2.run_simulation(sol);\n",
+    "print(runner2.last_graph_exec_time)\n",
+    "sol.xyt[0,0]"
+   ]
   },
   {
    "cell_type": "markdown",
