--- a/analysis/streams.ipynb
+++ b/analysis/streams.ipynb
@@ -11,7 +11,9 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "local\n"
+      "local\n",
+      "local\n",
+      "Preallocate for cost\n"
      ]
     }
    ],
@@ -31,6 +33,7 @@
     "import pack_cost\n",
     "import copy\n",
     "import time\n",
+    "import pack_dynamics\n",
     "from IPython.display import HTML, display, clear_output\n",
     "pack_cuda.USE_FLOAT32 = True\n",
     "pack_cuda._ensure_initialized()\n"
@@ -38,296 +41,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 2,
+   "id": "144f2459",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
-      "Preallocate for cost\n",
-      "local\n",
-      "Preallocate for cost\n"
+      "(10, 200, 3) (10, 3)\n"
      ]
     }
    ],
    "source": [
-    "def to_dict(obj):\n",
-    "    out = dict(obj.__dict__)  # start with stored attributes\n",
-    "    for name in dir(obj):\n",
-    "        if isinstance(getattr(type(obj), name, None), property):\n",
-    "            out[name] = getattr(obj, name)\n",
-    "    return out\n",
-    "\n",
-    "@dataclass\n",
-    "class MegaDynamics(kgs.BaseClass):\n",
-    "    # Configuration\n",
-    "    n_trees = 40\n",
-    "    n_ensembles = 1000\n",
-    "    n_rounds = 5\n",
-    "    seed = 42\n",
-    "    plot_interval = None\n",
-    "\n",
-    "    # Hyperparameters\n",
-    "    size_setup = 0.5 # will be mulitiplied by sqrt(n_trees)\n",
-    "    duration_init = 10.\n",
-    "    duration_compact = 200.\n",
-    "    duration_final = 10. # careful - lowering this can seem to make things better, but actually can mean overlapping solutions\n",
-    "    dt = 0.02\n",
-    "    friction_min = 0.1\n",
-    "    friction_max = 10.\n",
-    "    friction_periods = 10\n",
-    "    scaling_area_start = 0.3\n",
-    "    scaling_area_end = 0.001\n",
-    "    scaling_boundary = 5.\n",
-    "    scaling_overlap = 1. # recommend to keep this fixed\n",
-    "    scaling_overall_factor = 1.\n",
-    "    use_boundary_distance = True\n",
-    "\n",
-    "    # Results\n",
-    "    sizes = None # n_ensemble rows, n_round columns\n",
-    "    best_size = np.inf\n",
-    "    best_xyt = None\n",
-    "    time = None\n",
-    "    xyt_final = None\n",
-    "\n",
-    "    def run_simulation(self):\n",
-    "        # Initial configuration\n",
-    "        size_setup_scaled = self.size_setup * np.sqrt(self.n_trees)\n",
-    "        xyt = np.random.default_rng(seed=self.seed).uniform(-0.5, 0.5, size=(self.n_ensembles, self.n_trees, 3))\n",
-    "        xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "        xyt = np.array(xyt, dtype=np.float32)\n",
-    "        h = np.array([[[2*size_setup_scaled,0.,0.]]*self.n_ensembles], dtype=np.float32)\n",
-    "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
-    "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
-    "                                             pack_cost.CollisionCostOverlappingArea(scaling=self.scaling_overlap)])\n",
-    "        if not self.use_boundary_distance:\n",
-    "            cost.costs[1] = pack_cost.BoundaryCost(scaling=self.scaling_boundary)\n",
-    "\n",
-    "\n",
-    "        #plt.ioff()\n",
-    "        if self.plot_interval is not None:\n",
-    "            #plt.ion()\n",
-    "            fig, ax = plt.subplots(figsize=(8, 8))\n",
-    "            tree_list = kgs.TreeList()\n",
-    "            #print(xyt[0].shape)\n",
-    "            #tree_list.xyt = xyt[0]\n",
-    "            #pack_vis.visualize_tree_list(tree_list, ax=ax, h=size_setup_scaled)\n",
-    "            #display(fig)\n",
-    "            #clear_output(wait=True)\n",
-    "\n",
-    "        xyt = cp.array(xyt)\n",
-    "        h = cp.array(h)\n",
-    "\n",
-    "        t_total = np.float32(0.)\n",
-    "        dt = np.float32(self.dt)\n",
-    "        phase = 'init'\n",
-    "        t_this_phase = np.float32(0.)\n",
-    "        t_last_plot = np.float32(0.)\n",
-    "        rounds_done = 0\n",
-    "        self.sizes = np.zeros((self.n_ensembles, self.n_rounds), dtype=np.float32)\n",
-    "        time_start = time.time()\n",
-    "        velocity_xyt = cp.zeros_like(xyt)\n",
-    "        velocity_h = cp.zeros_like(h)\n",
-    "        while True:            \n",
-    "            if phase == 'compact':\n",
-    "                frac = t_this_phase / self.duration_compact\n",
-    "                start = self.scaling_area_start\n",
-    "                end = self.scaling_area_end\n",
-    "                area_scaling = start * (end / start) ** frac\n",
-    "                cost.costs[0].scaling = area_scaling\n",
-    "                friction = self.friction_max + (self.friction_min - self.friction_max) * (1+np.cos(frac*2*np.pi*self.friction_periods))/2\n",
-    "            else:\n",
-    "                cost.costs[0].scaling = 0.\n",
-    "                friction = 1/dt\n",
-    "            total_cost, total_grad, bound_grad = cost.compute_cost(xyt, h)\n",
-    "            #print(t_total, total_cost)\n",
-    "            total_grad *= self.scaling_overall_factor\n",
-    "            bound_grad *= self.scaling_overall_factor\n",
-    "            velocity_xyt += -dt*friction*velocity_xyt - dt*total_grad\n",
-    "            velocity_h += 0*velocity_h - dt*bound_grad\n",
-    "            xyt += dt * velocity_xyt\n",
-    "            h += dt * velocity_h\n",
-    "            t_total += dt\n",
-    "            t_this_phase += dt\n",
-    "            if self.plot_interval is not None and t_total - t_last_plot >= self.plot_interval*0.999:\n",
-    "                t_last_plot = t_total                \n",
-    "                ax.clear()\n",
-    "                ax.set_aspect('equal', adjustable='box')\n",
-    "                tree_list.xyt = cp.asnumpy(xyt[0])\n",
-    "                pack_vis.visualize_tree_list(tree_list, ax=ax, h=cp.asnumpy(h[0,0]))\n",
-    "                ax.set_title(f'Time: {t_total:.2f}, Round:{rounds_done+1}, Phase: {phase}, Area scaling: {cost.costs[0].scaling:.4f}, Cost: {total_cost[0]:.4f}, friction: {friction}')\n",
-    "                display(fig)\n",
-    "                clear_output(wait=True)       \n",
-    "\n",
-    "            if phase == 'init' and t_this_phase >= self.duration_init:\n",
-    "                phase = 'compact'\n",
-    "                t_this_phase = 0.    \n",
-    "            elif phase == 'compact' and t_this_phase >= self.duration_compact:\n",
-    "                phase = 'final'\n",
-    "                t_this_phase = 0.\n",
-    "            elif phase == 'final' and t_this_phase >= self.duration_final:\n",
-    "                # Report out\n",
-    "                self.xyt_final = cp.asnumpy(xyt)\n",
-    "                overlaps = pack_cost.CollisionCostOverlappingArea().compute_cost(sol)[0]\n",
-    "                # Compute edge of smallest axis-aligned square containing all tree polygons for each ensemble\n",
-    "                for ei in range(self.n_ensembles):\n",
-    "                    try:\n",
-    "                        tree_list_local = kgs.TreeList()\n",
-    "                        tree_list_local.xyt = cp.asnumpy(xyt[ei])\n",
-    "                        polygons = tree_list_local.get_trees()\n",
-    "                        # collect all vertex coordinates\n",
-    "                        xs = []\n",
-    "                        ys = []\n",
-    "                        for poly in polygons:\n",
-    "                            for vx, vy in poly.exterior.coords[:-1]:\n",
-    "                                xs.append(vx)\n",
-    "                                ys.append(vy)\n",
-    "                            # include interior rings if present\n",
-    "                            for interior in poly.interiors:\n",
-    "                                for vx, vy in interior.coords[:-1]:\n",
-    "                                    xs.append(vx)\n",
-    "                                    ys.append(vy)\n",
-    "                        min_x = min(xs) if xs else 0.0\n",
-    "                        max_x = max(xs) if xs else 0.0\n",
-    "                        min_y = min(ys) if ys else 0.0\n",
-    "                        max_y = max(ys) if ys else 0.0\n",
-    "                        edge = float(max(max_x - min_x, max_y - min_y))\n",
-    "                        self.sizes[ei, rounds_done] = edge\n",
-    "                    except:\n",
-    "                        self.sizes[ei,rounds_done] = np.nan                    \n",
-    "                    #if overlaps[ei] > 0.0001*np.sqrt(self.n_trees):\n",
-    "                    #    self.sizes[ei, rounds_done] = np.nan\n",
-    "                    if self.sizes[ei, rounds_done] < self.best_size:\n",
-    "                        self.best_size = self.sizes[ei, rounds_done]\n",
-    "                        self.best_xyt = cp.asnumpy(xyt[ei]) \n",
-    "\n",
-    "                rounds_done += 1\n",
-    "                if rounds_done >= self.n_rounds:\n",
-    "                    self.time = time.time()-time_start\n",
-    "                    break\n",
-    "                \n",
-    "                phase = 'compact'\n",
-    "                t_this_phase = 0.   \n",
-    "\n",
-    "        # If a temporary plotting figure was created, close it to release resources\n",
-    "        #if self.plot_interval is not None:\n",
-    "        #    plt.close(fig)\n",
-    "            \n",
-    "import pack_dynamics\n",
-    "importlib.reload(pack_dynamics)\n",
-    "                                                       \n",
-    "@dataclass\n",
-    "class MegaDynamics2(pack_dynamics.DynamicsInitialize):\n",
-    "    # Configuration\n",
-    "    n_trees = 40\n",
-    "    n_ensembles = 1000    \n",
-    "    seed = 42\n",
-    "    size_setup = None\n",
-    "   \n",
-    "    # Results\n",
-    "    sizes = None # n_ensemble rows, n_round columns\n",
-    "    best_size = np.inf\n",
-    "    best_xyt = None\n",
-    "    time = None\n",
-    "    xyt_final = None\n",
-    "\n",
-    "    def run_simulation_wrap(self):\n",
-    "        # Initial configuration\n",
-    "        size_setup_scaled = self.size_setup * np.sqrt(self.n_trees)\n",
-    "        xyt = np.random.default_rng(seed=self.seed).uniform(-0.5, 0.5, size=(self.n_ensembles, self.n_trees, 3))\n",
-    "        xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "        xyt = np.array(xyt, dtype=np.float32)\n",
-    "        self.sizes = np.ndarray((self.n_ensembles,))\n",
-    "        h = np.array([[2*size_setup_scaled,0.,0.]]*self.n_ensembles, dtype=np.float32)\n",
-    "        print(h.shape)\n",
-    "\n",
-    "        sol = kgs.SolutionCollection()\n",
-    "        sol.xyt= cp.array(xyt)\n",
-    "        sol.h = cp.array(h)\n",
-    "\n",
-    "        sol = self.run_simulation(sol)\n",
-    "        xyt,h = sol.xyt, sol.h\n",
-    "        self.xyt_final = xyt\n",
-    "        \n",
-    "        # Report out\n",
-    "        overlaps = pack_cost.CollisionCostOverlappingArea().compute_cost_allocate(sol)[0]\n",
-    "        # Compute edge of smallest axis-aligned square containing all tree polygons for each ensemble\n",
-    "        for ei in range(self.n_ensembles):\n",
-    "            try:\n",
-    "                tree_list_local = kgs.TreeList()\n",
-    "                tree_list_local.xyt = cp.asnumpy(xyt[ei])\n",
-    "                polygons = tree_list_local.get_trees()\n",
-    "                # collect all vertex coordinates\n",
-    "                xs = []\n",
-    "                ys = []\n",
-    "                for poly in polygons:\n",
-    "                    for vx, vy in poly.exterior.coords[:-1]:\n",
-    "                        xs.append(vx)\n",
-    "                        ys.append(vy)\n",
-    "                    # include interior rings if present\n",
-    "                    for interior in poly.interiors:\n",
-    "                        for vx, vy in interior.coords[:-1]:\n",
-    "                            xs.append(vx)\n",
-    "                            ys.append(vy)\n",
-    "                min_x = min(xs) if xs else 0.0\n",
-    "                max_x = max(xs) if xs else 0.0\n",
-    "                min_y = min(ys) if ys else 0.0\n",
-    "                max_y = max(ys) if ys else 0.0\n",
-    "                edge = float(max(max_x - min_x, max_y - min_y))\n",
-    "                self.sizes[ei] = edge\n",
-    "            except:\n",
-    "                self.sizes[ei] = np.nan                    \n",
-    "            #if overlaps[ei] > 0.0001*np.sqrt(self.n_trees):\n",
-    "            #    self.sizes[ei] = np.nan\n",
-    "            if self.sizes[ei] < self.best_size:\n",
-    "                self.best_size = self.sizes[ei]\n",
-    "                self.best_xyt = cp.asnumpy(xyt[ei]) \n",
-    "                \n",
-    "\n",
-    "            \n",
-    "                                                       \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "144f2459",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gen = np.random.default_rng(seed=12345)\n",
-    "runner=MegaDynamics2()\n",
-    "runner.n_trees = 40\n",
-    "runner.n_ensembles = 100\n",
-    "runner.n_rounds = 1\n",
-    "runner.plot_interval = None\n",
-    "runner.size_setup = 0.65\n",
-    "runner.duration_init = 10.\n",
-    "runner.duration_compact = 4.\n",
-    "runner.duration_final = 0.\n",
-    "runner.dt = 0.08\n",
-    "runner.scaling_area_start = (10**-0.5)*10.\n",
-    "runner.scaling_area_end = 0.1*10.\n",
-    "runner.scaling_boundary = 5.\n",
-    "runner.scaling_overlap = 10.\n",
-    "#runner.scaling_overall_factor = 10.\n",
-    "runner.use_boundary_distance = True\n",
-    "runner.friction_min = 1.\n",
-    "runner.friction_max = 0.\n",
-    "runner.friction_periods = gen.choice(2)\n",
-    "N=20\n",
+    "runner = pack_dynamics.Optimizer()\n",
+    "runner.n_iterations *= 2\n",
+    "size_setup_scaled = 0.65\n",
+    "n_ensembles = 10\n",
+    "n_trees = 200\n",
+    "xyt = np.random.default_rng(seed=52).uniform(-0.5, 0.5, size=(n_ensembles, n_trees, 3))\n",
+    "xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
+    "xyt = np.array(xyt, dtype=np.float32)\n",
+    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=np.float32)\n",
+    "h = h[0]\n",
+    "sol = kgs.SolutionCollection()\n",
+    "sol.xyt = cp.array(xyt, dtype=cp.float32)\n",
+    "sol.h = cp.array(h, dtype=cp.float32)\n",
+    "print(sol.xyt.shape, sol.h.shape)\n",
+    "sol.check_constraints()\n",
+    "N=4\n",
     "streams = [cp.cuda.Stream(non_blocking=True) for _ in range(N)]\n",
-    "runners = [copy.deepcopy(runner) for _ in range(N)]"
+    "runners = [copy.deepcopy(runner) for _ in range(N)]\n",
+    "sols = [copy.deepcopy(sol) for _ in range(N)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "c3908169",
    "metadata": {},
    "outputs": [
@@ -335,20 +86,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 3)\n",
-      "CPU times: user 751 ms, sys: 37.1 ms, total: 788 ms\n",
-      "Wall time: 805 ms\n"
+      "CPU times: user 5.25 s, sys: 360 ms, total: 5.61 s\n",
+      "Wall time: 5.74 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "runner.run_simulation_wrap()"
+    "runners[0].run_simulation(sols[0]);\n",
+    "None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9cea1fc6",
    "metadata": {},
    "outputs": [
@@ -356,71 +107,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "(100, 3)\n",
-      "1\n",
-      "(100, 3)\n",
-      "2\n",
-      "(100, 3)\n",
-      "3\n",
-      "(100, 3)\n",
-      "4\n",
-      "(100, 3)\n",
-      "5\n",
-      "(100, 3)\n",
-      "6\n",
-      "(100, 3)\n",
-      "7\n",
-      "(100, 3)\n",
-      "8\n",
-      "(100, 3)\n",
-      "9\n",
-      "(100, 3)\n",
-      "10\n",
-      "(100, 3)\n",
-      "11\n",
-      "(100, 3)\n",
-      "12\n",
-      "(100, 3)\n",
-      "13\n",
-      "(100, 3)\n",
-      "14\n",
-      "(100, 3)\n",
-      "15\n",
-      "(100, 3)\n",
-      "16\n",
-      "(100, 3)\n",
-      "17\n",
-      "(100, 3)\n",
-      "18\n",
-      "(100, 3)\n",
-      "19\n",
-      "(100, 3)\n",
-      "CPU times: user 9.83 s, sys: 758 ms, total: 10.6 s\n",
-      "Wall time: 11.1 s\n"
+      "CPU times: user 19.9 s, sys: 1.59 s, total: 21.5 s\n",
+      "Wall time: 21.2 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "for i in range(N):\n",
-    "    print(i)\n",
-    "    runners[i].run_simulation_wrap()"
+    "    runners[i].run_simulation(sols[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f69f09a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15.2 s, sys: 1.42 s, total: 16.6 s\n",
+      "Wall time: 16.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(N):\n",
+    "    with streams[i]:\n",
+    "        runners[i].run_simulation(sols[i])\n",
+    "#streams[i].synchronize()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69f09a2",
+   "id": "24405153",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%%time\n",
-    "for i in range(N):\n",
-    "    with streams[i]:\n",
-    "        print(i)\n",
-    "        runners[i].run_simulation_wrap()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
