Simple test for init

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -35,7 +35,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x745b7ef54040>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x76c6a67a81c0>\n",
       "Testing cost computation and gradients\n",
       "\n",
       "Testing CostDummy\n",
