--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -7,6 +7,39 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jcottaar/miniconda3/envs/xlab/lib/python3.11/site-packages/cupy/_environment.py:596: UserWarning: \n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "  CuPy may not function correctly because multiple CuPy packages are installed\n",
+      "  in your environment:\n",
+      "\n",
+      "    cupy, cupy-cuda12x\n",
+      "\n",
+      "  Follow these steps to resolve this issue:\n",
+      "\n",
+      "    1. For all packages listed above, run the following command to remove all\n",
+      "       existing CuPy installations:\n",
+      "\n",
+      "         $ pip uninstall <package_name>\n",
+      "\n",
+      "      If you previously installed CuPy via conda, also run the following:\n",
+      "\n",
+      "         $ conda uninstall cupy\n",
+      "\n",
+      "    2. Install the appropriate CuPy package.\n",
+      "       Refer to the Installation Guide for detailed instructions.\n",
+      "\n",
+      "         https://docs.cupy.dev/en/stable/install.html\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "  warnings.warn(f'''\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -170,8 +203,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.3 s, sys: 279 ms, total: 21.6 s\n",
-      "Wall time: 22 s\n"
+      "CPU times: user 15 s, sys: 318 ms, total: 15.3 s\n",
+      "Wall time: 16.1 s\n"
      ]
     }
    ],
@@ -238,8 +271,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.17 s, sys: 216 ms, total: 1.39 s\n",
-      "Wall time: 1.42 s\n"
+      "CPU times: user 1.13 s, sys: 164 ms, total: 1.3 s\n",
+      "Wall time: 1.28 s\n"
      ]
     },
     {
