--- a/analysis/test_annealing.ipynb
+++ b/analysis/test_annealing.ipynb
@@ -248,7 +248,7 @@
     "        h = np.array([[2*size_setup_scaled,0.,0.]]*self.n_ensembles, dtype=np.float32)\n",
     "        print(h.shape)\n",
     "\n",
-    "        sol = kgs.SolutionCollection()\n",
+    "        sol = kgs.SolutionCollectionSquare()\n",
     "        sol.xyt= cp.array(xyt)\n",
     "        sol.h = cp.array(h)\n",
     "\n",
@@ -360,7 +360,7 @@
     "tree_list.xyt = xyt_to_relax.get()\n",
     "pack_vis.visualize_tree_list(tree_list)\n",
     "import pack_ga\n",
-    "sol = kgs.SolutionCollection()\n",
+    "sol = kgs.SolutionCollectionSquare()\n",
     "sol.xyt = cp.array([xyt_to_relax], dtype=cp.float32)\n",
     "sol.snap()\n",
     "for r in pack_ga.GA().rough_relaxers:\n",
