--- a/analysis/dynamics3.ipynb
+++ b/analysis/dynamics3.ipynb
@@ -247,7 +247,7 @@
     "        h = np.array([[2*size_setup_scaled,0.,0.]]*self.n_ensembles, dtype=np.float32)\n",
     "        print(h.shape)\n",
     "\n",
-    "        sol = kgs.SolutionCollection()\n",
+    "        sol = kgs.SolutionCollectionSquare()\n",
     "        sol.xyt= cp.array(xyt)\n",
     "        sol.h = cp.array(h)\n",
     "\n",
@@ -488,7 +488,7 @@
     "relaxer.dt /= 2\n",
     "relaxer.n_iterations *= 1\n",
     "relaxer.plot_interval = None\n",
-    "sol = kgs.SolutionCollection()\n",
+    "sol = kgs.SolutionCollectionSquare()\n",
     "sol.xyt = cp.array([xyt_to_relax], dtype=cp.float32)\n",
     "sol.snap()\n",
     "sol=relaxer.run_simulation(sol);\n",
@@ -535,7 +535,7 @@
     "relaxer.dt /= 2\n",
     "relaxer.n_iterations *= 2\n",
     "relaxer.plot_interval = None\n",
-    "sol = kgs.SolutionCollection()\n",
+    "sol = kgs.SolutionCollectionSquare()\n",
     "sol.xyt = cp.array([xyt_to_relax], dtype=cp.float32)\n",
     "sol.snap()\n",
     "sol=relaxer.run_simulation(sol);\n",
@@ -559,7 +559,7 @@
     "#relaxer.dt /= 2\n",
     "relaxer.n_iterations *= 1\n",
     "relaxer.plot_interval = None\n",
-    "sol = kgs.SolutionCollection()\n",
+    "sol = kgs.SolutionCollectionSquare()\n",
     "sol.xyt = cp.array([xyt_to_relax], dtype=cp.float32)\n",
     "sol.snap()\n",
     "sol=relaxer.run_simulation(sol);\n",
