--- a/analysis/streams.ipynb
+++ b/analysis/streams.ipynb
@@ -65,7 +65,7 @@
     "xyt = np.array(xyt, dtype=np.float32)\n",
     "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=np.float32)\n",
     "h = h[0]\n",
-    "sol = kgs.SolutionCollection()\n",
+    "sol = kgs.SolutionCollectionSquare()\n",
     "sol.xyt = cp.array(xyt, dtype=cp.float32)\n",
     "sol.h = cp.array(h, dtype=cp.float32)\n",
     "print(sol.xyt.shape, sol.h.shape)\n",
