Increase test accuracy and optional gradients

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -35,7 +35,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7629c5833cc0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7add97bbbf40>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -64,21 +64,93 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Testing CostDummy\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Cannot add new attribute 'xyt' to frozen instance",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_test\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mpack_test\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_all_tests\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/core/pack_test.py:19\u001b[39m, in \u001b[36mrun_all_tests\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     17\u001b[39m kgs.debugging_mode = \u001b[32m2\u001b[39m\n\u001b[32m     18\u001b[39m pack_cuda_primitives_test.run_all_tests()\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[43mtest_costs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAll tests passed.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/core/pack_test.py:53\u001b[39m, in \u001b[36mtest_costs\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     51\u001b[39m b_single = b[\u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[32m     52\u001b[39m sol_single = kgs.SolutionCollectionSquare()\n\u001b[32m---> \u001b[39m\u001b[32m53\u001b[39m \u001b[43msol_single\u001b[49m\u001b[43m.\u001b[49m\u001b[43mxyt\u001b[49m = xyt_single\n\u001b[32m     54\u001b[39m sol_single.h = b_single\n\u001b[32m     56\u001b[39m \u001b[38;5;66;03m# Store for vectorized check\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/core/kaggle_support.py:128\u001b[39m, in \u001b[36mBaseClass.__setattr__\u001b[39m\u001b[34m(self, key, value)\u001b[39m\n\u001b[32m    125\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, value):\n\u001b[32m    126\u001b[39m     \u001b[38;5;66;03m# If the object is frozen, prevent setting new attributes\u001b[39;00m\n\u001b[32m    127\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._is_frozen \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCannot add new attribute \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m to frozen instance\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    129\u001b[39m     \u001b[38;5;28msuper\u001b[39m().\u001b[34m__setattr__\u001b[39m(key, value)\n",
-      "\u001b[31mAttributeError\u001b[39m: Cannot add new attribute 'xyt' to frozen instance"
+      "Testing CostDummy\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "  Vectorized check for CostDummy\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for CostDummy single (evaluate_gradient=False): 0.115 ms\n",
+      "Time taken for CostDummy single (evaluate_gradient=True): 0.134 ms\n",
+      "\n",
+      "Testing AreaCost\n",
+      "[0.25]\n",
+      "[0.25]\n",
+      "[4.]\n",
+      "[4.]\n",
+      "  Vectorized check for AreaCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for AreaCost single (evaluate_gradient=False): 0.149 ms\n",
+      "Time taken for AreaCost single (evaluate_gradient=True): 0.118 ms\n",
+      "\n",
+      "Testing CollisionCostSeparation\n",
+      "[4.1038427]\n",
+      "[4.1038447170149235]\n",
+      "[5.0564213]\n",
+      "[5.056422950038268]\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for CollisionCostSeparation single (evaluate_gradient=False): 0.037 ms\n",
+      "Time taken for CollisionCostSeparation single (evaluate_gradient=True): 0.728 ms\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[8.393215]\n",
+      "[8.393215014221717]\n",
+      "[0.07738521]\n",
+      "[0.07738519828213797]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for BoundaryDistanceCost single (evaluate_gradient=False): 1.900 ms\n",
+      "Time taken for BoundaryDistanceCost single (evaluate_gradient=True): 1.311 ms\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[41.966064]\n",
+      "[41.966075071108584]\n",
+      "[0.38692588]\n",
+      "[0.38692599141068984]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for BoundaryDistanceCost single (evaluate_gradient=False): 0.076 ms\n",
+      "Time taken for BoundaryDistanceCost single (evaluate_gradient=True): 0.151 ms\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.1456323]\n",
+      "[2.1456324600829237]\n",
+      "[2.6354358]\n",
+      "[2.635436698619012]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for CollisionCostOverlappingArea single (evaluate_gradient=False): 0.043 ms\n",
+      "Time taken for CollisionCostOverlappingArea single (evaluate_gradient=True): 0.847 ms\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[12.96482]\n",
+      "[12.964822521332575]\n",
+      "[6.1160774]\n",
+      "[6.116077797423207]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "Time taken for CostCompound single (evaluate_gradient=False): 0.354 ms\n",
+      "Time taken for CostCompound single (evaluate_gradient=True): 0.534 ms\n",
+      "\n",
+      "Testing CollisionCostSeparation\n",
+      "[0.820769]\n",
+      "[0.8207689434029846]\n"
      ]
     }
    ],
