Further optimize calculation with no gradients

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -35,7 +35,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7add97bbbf40>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7f5e90f2bec0>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -73,8 +73,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for CostDummy single (evaluate_gradient=False): 0.115 ms\n",
-      "Time taken for CostDummy single (evaluate_gradient=True): 0.134 ms\n",
       "\n",
       "Testing AreaCost\n",
       "[0.25]\n",
@@ -85,8 +83,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for AreaCost single (evaluate_gradient=False): 0.149 ms\n",
-      "Time taken for AreaCost single (evaluate_gradient=True): 0.118 ms\n",
       "\n",
       "Testing CollisionCostSeparation\n",
       "[4.1038427]\n",
@@ -97,8 +93,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for CollisionCostSeparation single (evaluate_gradient=False): 0.037 ms\n",
-      "Time taken for CollisionCostSeparation single (evaluate_gradient=True): 0.728 ms\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
       "[8.393215]\n",
@@ -109,8 +103,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for BoundaryDistanceCost single (evaluate_gradient=False): 1.900 ms\n",
-      "Time taken for BoundaryDistanceCost single (evaluate_gradient=True): 1.311 ms\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
       "[41.966064]\n",
@@ -121,8 +113,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for BoundaryDistanceCost single (evaluate_gradient=False): 0.076 ms\n",
-      "Time taken for BoundaryDistanceCost single (evaluate_gradient=True): 0.151 ms\n",
       "\n",
       "Testing CollisionCostOverlappingArea\n",
       "[2.1456323]\n",
@@ -133,8 +123,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for CollisionCostOverlappingArea single (evaluate_gradient=False): 0.043 ms\n",
-      "Time taken for CollisionCostOverlappingArea single (evaluate_gradient=True): 0.847 ms\n",
       "\n",
       "Testing CostCompound\n",
       "[12.96482]\n",
@@ -145,8 +133,6 @@
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
-      "Time taken for CostCompound single (evaluate_gradient=False): 0.354 ms\n",
-      "Time taken for CostCompound single (evaluate_gradient=True): 0.534 ms\n",
       "\n",
       "Testing CollisionCostSeparation\n",
       "[0.820769]\n",
