--- a/analysis/test_speed.ipynb
+++ b/analysis/test_speed.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "144f2459",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "2de19014",
    "metadata": {},
    "outputs": [],
@@ -376,32 +376,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "dd83664c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Cost.compute_cost_allocate() missing 1 required positional argument: 'sol'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m sol2.h = cp.tile(sol2.h[\u001b[32m0\u001b[39m:\u001b[32m1\u001b[39m], (N,\u001b[32m1\u001b[39m))\n\u001b[32m      7\u001b[39m sol2.check_constraints()\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m a,b,c = \u001b[43mcost\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompute_cost_allocate\u001b[49m\u001b[43m(\u001b[49m\u001b[43msol2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m cost.compute_cost(sol2,a,b,c)\n",
-      "\u001b[31mTypeError\u001b[39m: Cost.compute_cost_allocate() missing 1 required positional argument: 'sol'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sol.check_constraints()\n",
-    "cost = pack_cost.CollisionCostSeparation\n",
-    "N=1000\n",
+    "cost = pack_cost.CollisionCostSeparation()\n",
+    "N=100000\n",
     "sol2 = copy.deepcopy(sol)\n",
     "sol2.xyt = cp.tile(sol2.xyt[0:1], (N,1,1))\n",
     "sol2.h = cp.tile(sol2.h[0:1], (N,1))\n",
     "sol2.check_constraints()\n",
     "a,b,c = cost.compute_cost_allocate(sol2)\n",
-    "cost.compute_cost(sol2,a,b,c)"
+    "cp.cuda.Stream.null.synchronize()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4176be2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.24 s, sys: 0 ns, total: 1.24 s\n",
+      "Wall time: 1.28 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for _ in range(10):\n",
+    "    cost.compute_cost(sol2,a,b,c,evaluate_gradient=True)\n",
+    "cp.cuda.Stream.null.synchronize()"
    ]
   },
   {
@@ -411,95 +421,40 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1000, 1, 3)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.15 s, sys: 0 ns, total: 1.15 s\n",
+      "Wall time: 1.19 s\n"
+     ]
     }
    ],
    "source": [
-    "sol.h.shape"
+    "%%time\n",
+    "for _ in range(10):\n",
+    "    cost.compute_cost(sol2,a,b,c,evaluate_gradient=False)\n",
+    "cp.cuda.Stream.null.synchronize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "efe6dffc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SolutionCollectionSquare(comment='', xyt=array([[[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]],\n",
-       "\n",
-       "       [[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]],\n",
-       "\n",
-       "       [[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]],\n",
-       "\n",
-       "       [[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]],\n",
-       "\n",
-       "       [[ 1.4101502 , -0.08018358,  1.5196434 ],\n",
-       "        [ 0.38813153, -1.7606784 ,  1.9824138 ],\n",
-       "        [ 1.4972314 ,  1.0500245 ,  0.03997331],\n",
-       "        ...,\n",
-       "        [-1.4402663 , -0.39793143, -0.47688392],\n",
-       "        [-1.0502075 ,  1.243631  ,  0.28675058],\n",
-       "        [ 0.90801686, -0.3017379 ,  0.6061616 ]]],\n",
-       "      shape=(1000, 40, 3), dtype=float32), h=array([[ 3.7443442 ,  0.0097704 , -0.03124704],\n",
-       "       [ 3.7443442 ,  0.0097704 , -0.03124704],\n",
-       "       [ 3.7443442 ,  0.0097704 , -0.03124704],\n",
-       "       ...,\n",
-       "       [ 3.7443442 ,  0.0097704 , -0.03124704],\n",
-       "       [ 3.7443442 ,  0.0097704 , -0.03124704],\n",
-       "       [ 3.7443442 ,  0.0097704 , -0.03124704]],\n",
-       "      shape=(1000, 3), dtype=float32))"
+       "(100000, 40, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sol2"
+    "sol2.xyt.shape"
    ]
   },
   {
